# fSAX

./: README.md  install.sh
src/: CMakeLists.txt  attr.F90  attributes.F90  compilerOptions.cmake  config.h.in  contenthandler.F90  doxygen.conf.in  dtd.F90  entities.F90  errorhandler.F90  fsax.F90  fsaxConfig.cmake.in  fsaxVersion.cmake.in  inputsource.F90  iso_varying_string.F90  locator.F90  saxexception.F90  saxio.F90  saxparseexception.F90  xmlreader.F90
src/tests/: CMakeLists.txt  attr1.F90  entity1.F90  parse.F90  read.F90  template.F90  test.xml
